# web_api

./: alembic.ini  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_02_05_2234-b0fa79456f48_create_products_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
